--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/projetofinal
+spring.datasource.url=jdbc:mysql://localhost/testds1
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
